2006-07-28  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/which-func.el (which-function): Fix documentation/
	comment typo.

2006-07-26  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (sit-for): Use new SECONDS arg of read-event instead of
	a timer.

2006-07-26  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el (tumme-backward-image): Add prefix argument. Add error
	when at first image.
	(tumme-forward-image): Add prefix argument. Add error when at last
	image.

2006-07-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tabify.el (tabify-regexp): Use more specific regexps.
	(tabify): Avoid modifying the buffer unnecessarily.

2006-07-25  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el (tumme-track-original-file): Add `buffer-live-p' check.
	(tumme-format-properties-string): Handle empty `buf'.
	(tumme-get-comment): Change variable names inside `let'.  Add
	missing `let' variable that cause font-lock problems.
	(tumme-write-comments): Change variable names inside `let'.  Add
	missing `let' variable that cause font-lock problems.
	(tumme-forward-image): Rename from `tumme-forward-char'.
	(tumme-backward-image): Rename from `tumme-backward-char'.

2006-07-25  Masatake YAMATO  <jet@gyve.org>

	* progmodes/ld-script.el (ld-script-keywords)
	(ld-script-font-lock-keywords, ld-script-builtins): Update keywords
	and add comments.

2006-07-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-set-gud-minor-mode-existing-buffers)
	(gdb-resync, gdb-prompt, gdb-starting, gdb-exited, gdb-stopped)
	(gdb-set-gud-minor-mode-existing-buffers-1): Use different faces
	for status indicator.

2006-07-24  Richard Stallman  <rms@gnu.org>

	* xml.el (xml-parse-file): Clean up, and use with-temp-buffer.

	* subr.el (dolist, dotimes): Use interned symbols for locals.
	(--dotimes-limit--, --dolist-tail--): New defvars.
	(looking-back): Doc fix.

	* replace.el (replace-match-string-symbols): Handle dotted lists.

2006-07-24  mathias  <mathias@mattis>
